@@ -77,3 +77,8 @@ Tags: buddypress, two-column, fixed-width
 - BP buddybar removed in functions.php
 - Not sure what happens with wp-admin-bar?
 - This is work in progress requiring further attention
+
+08/12/11 tam
+- Changed front to be sign in / sign up directs to the registration if on (must have if on check wasn't there previously)
+- Must run WP 3.3 and BuddyPress 1.6 trunk to see this all work
+- Fixed up footer widgets and put back in default naming to get done for now
